style: fix spacing

--- a/client/style.css
+++ b/client/style.css
@@ -10,6 +10,14 @@
     --maxWidth: 500px;
     --socialWidth: 450px;
 }
+
+html,
+body,
+p {
+    margin: 0px;
+    padding: 0px;
+}
+
 html {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
@@ -17,12 +25,10 @@ html {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
-}
-html,
-body,
-p {
-    margin: 0px;
-    padding: 0px;
+
+    /* https://cssgradient.io  */
+    background: var(--gradient-1);
+    background: linear-gradient(129deg, var(--gradient-1) 36%, var(--gradient-2) 84%);
 }
 
 /* ================================================= */
@@ -35,12 +41,6 @@ body {
 
     color: var(--text);
     text-align: center;
-
-    /* https://cssgradient.io  */
-    background: var(--gradient-1);
-    background: linear-gradient(129deg, var(--gradient-1) 36%, var(--gradient-2) 84%);
-    min-height: 100vh;
-    min-width: 100vw;
 }
 
 main {
